# live-bootcamp-project

./: compose.yml
.github/workflows/: prod.yml
auth-service/: Cargo.toml  Dockerfile  build.rs
auth-service/proto/: authentication.proto
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: state.rs
auth-service/src/domain/: email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/domain/data_stores/: mod.rs
auth-service/src/g_rpc/: server.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs
auth-service/src/services/data_stores/: hashmap_user_store.rs  hashset_banned_token_store.rs  haspmap_two_fa_code_store.rs  mock_email_client.rs  mod.rs  postgresuser_store.rs  postmark_email_client.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  cors.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
