[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
reqwest = { version = "0.12.22", default-features = false, features = [
    "cookies",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
getset = "0.1.6"
once_cell = "1.21.3"
async-trait = "0.1.88"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
axum-extra = { version = "0.9.2", features = ["cookie"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.9.2"
